@@ -1,3 +1,8 @@
+Tue Oct 17 18:15:10 2000  George Lebl <jirka@5z.com>
+
+	* basep-widget.c: Fix the recalc on destroy.  /me smacks
+	  head against wall for committing a broken thingie.
+
 Tue Oct 17 10:38:49 2000  George Lebl <jirka@5z.com>
 
 	* penel.c, applet.c, basep-widget.c:  cleanup, recalc borders
